@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 # SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2018-2019, Intel Corporation
+# Copyright 2018-2024, Intel Corporation
 
 #
 # src/test/obj_extend/TEST1 -- unit test for extending the pool
@@ -22,7 +22,7 @@ create_poolset $DIR/testset2\
 	$RESVSIZE:$DIR/testdir21:d\
 	O SINGLEHDR
 
-PMEMOBJ_CONF="heap.size.granularity=$GRANULARITY"\
+PMEMOBJ_CONF="${PMEMOBJ_CONF};heap.size.granularity=$GRANULARITY"\
 	expect_normal_exit ./obj_extend$EXESUFFIX $DIR/testset2
 
 check
