@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 # SPDX-License-Identifier: BSD-3-Clause
-# Copyright 2018-2019, Intel Corporation
+# Copyright 2018-2024, Intel Corporation
 #
 #
 # pmempool_feature/TEST14 -- unit test for SHUTDOWN_STATE + ctl
@@ -15,7 +15,7 @@ require_sds $PMEMPOOL$EXESUFFIX
 setup
 . ./common.sh
 
-PMEMOBJ_CONF="${PMEMOBJ_CONF}sds.at_create=0"
+PMEMOBJ_CONF="${PMEMOBJ_CONF};sds.at_create=0"
 pmempool_feature_create_poolset "no_dax_device"
 pmempool_feature_query SHUTDOWN_STATE normal
 
