@@ -1,3 +1,9 @@
+XXX
+	* Version XXX
+
+	This release
+	- does not allow opening pmem pool without unsafe shoutdown counter if not explicitly disabled
+
 Mon Dec 4 2023 Oksana Sałyk <oksana.salyk@intel.com>
 
 	* Version 2.0.1
